--- a/TODO
+++ b/TODO
@@ -75,7 +75,7 @@
 [X] Change how `Vasm` are specified, use chaining instead of list of instructions
 [X] Make so `Vasm` are not populated when unnecessary
 [X] Cache parsed files that didn't change since last parsing
-[ ] Split regular methods and event callbacks during processing step
+[X] Split regular methods and event callbacks during processing step
 [ ] Add variable/function/field/method/type autocompletion suggestions
 [ ] Add autocompletion when pressing `.`
 [ ] Add autocompletion when pressing `::`
@@ -88,7 +88,7 @@
 [ ] One-liner methods
 [ ] Avoid recomputing the full path when using operation-assigment operators (e.g `a.b.c.d += 4` should not compute `a.b.c` twice)
 [ ] Replace references to constants with their actual value when possible
-[ ] Make `self` be available in field default values
+[ ] Make `self` available in field default values
 [ ] Add type parameter inference
 [ ] Improve variable type inference according to their first use
 [ ] Change the `?` suffix operator to return `none` if the expression it is applied to is `none`
