--- a/TODO
+++ b/TODO
@@ -88,11 +88,12 @@
 [X] Add `<…>` in completion label of types with parameters
 [X] Properly insert arguments of parameterized types during autocompletion
 [X] Properly insert arguments of functions/methods during autocompletion
-[ ] Show function argument info when typing
 [X] Fix closures that use variables created by the `is` keyword
-[ ] Remove possibility to specify only the type of arguments in function signature
-[ ] Determine for each type of the prelude if it should be exported or not
+[X] Remove possibility to specify only the type of arguments in function signature
 [ ] Move color constants to static methods
+[ ] Type hints for binary operators
+[ ] Determine for each type of the prelude if it should be exported or not
+[ ] Show function argument info when typing
 
 -- LATER --
 [ ] Allow manually specifying function parameters
