--- a/TODO
+++ b/TODO
@@ -92,7 +92,10 @@
 [X] Remove possibility to specify only the type of arguments in function signature
 [X] Move color constants to static methods
 [X] Type hints for binary operators
+[ ] Separate renaming, hover and goto definition
 [ ] Determine for each type of the prelude if it should be exported or not
+[ ] Add autocompletion for interfaces (when required for type parameter)
+[ ] Add autocompletion for macros
 [ ] Show function argument info when typing
 
 -- LATER --
