--- a/TODO
+++ b/TODO
@@ -96,7 +96,6 @@
 [X] Add autocompletion for interfaces (when required for type parameter)
 [X] Determine for each type of the prelude if it should be exported or not
 [X] Show function argument info when typing
-[ ] Determine what slows the language server down
 
 -- LATER --
 [ ] Allow manually specifying function parameters
@@ -137,6 +136,8 @@
 [ ] Add autocompletion for macros
 [ ] Sort errors by location in the console
 [ ] Add parsing for types/interfaces/functions/methods documentation
+[ ] Improve performance of source files processing
+[ ] Improve performance of wasm generation
 
 -- COMMON ITERATOR METHODS --
 enumerate, zip, rev
