--- a/TODO
+++ b/TODO
@@ -96,6 +96,7 @@
 [X] Add autocompletion for interfaces (when required for type parameter)
 [X] Determine for each type of the prelude if it should be exported or not
 [X] Show function argument info when typing
+[X] Add icon for lotus files
 
 -- LATER --
 [ ] Allow manually specifying function parameters
@@ -138,6 +139,7 @@
 [ ] Add parsing for types/interfaces/functions/methods documentation
 [ ] Improve performance of source files processing
 [ ] Improve performance of wasm generation
+[ ] Add better syntax highlighting from language server (https://code.visualstudio.com/api/references/vscode-api#DocumentSemanticTokensProvider)
 
 -- COMMON ITERATOR METHODS --
 enumerate, zip, rev
