--- a/TODO
+++ b/TODO
@@ -97,6 +97,9 @@
 [X] Determine for each type of the prelude if it should be exported or not
 [X] Show function argument info when typing
 [X] Add icon for lotus files
+[ ] Make so external wasm functions can be imported via lotus
+[ ] Add extension setting to select compiler
+[ ] Prefix all items with `Parsed`
 
 -- LATER --
 [ ] Allow manually specifying function parameters
