Improve anonymous functions flexibility.

--- a/TODO
+++ b/TODO
@@ -101,6 +101,9 @@
 [X] Add extension setting to select compiler
 [X] Do not insert function arguments if they are already there
 [X] Prefix all items with `Parsed`
+[X] Allow to specify argument types in anonymous functions
+[X] Allow to not specify all expected arguments in anonymous functions
+[ ] Setting to disable language server
 
 -- LATER --
 [ ] Allow manually specifying function parameters
