--- a/TODO
+++ b/TODO
@@ -151,6 +151,7 @@
 [ ] Improve performance of wasm generation
 [ ] Add better syntax highlighting from language server (https://code.visualstudio.com/api/references/vscode-api#DocumentSemanticTokensProvider)
 [ ] Have different types for `DisplaySize`?
+[ ] Better handle the `as` operation (properly convert to/from `f32` and to/from `void`)
 
 -- COMMON ITERATOR METHODS --
 enumerate, zip, rev
