--- a/TODO
+++ b/TODO
@@ -107,8 +107,7 @@
 [X] Add enum variants/static methods/true/false/none in completion list when they match the expected type
 [X] Handle completion item order in language server
 [X] Integrate autocompletion commands to language server
-[ ] Option to skip parsing of successive `Option` items if one fails
-[ ] Improve `match` block
+[X] Improve `match` block
 
 -- LATER --
 [ ] Allow manually specifying function parameters
@@ -154,6 +153,7 @@
 [ ] Add better syntax highlighting from language server (https://code.visualstudio.com/api/references/vscode-api#DocumentSemanticTokensProvider)
 [ ] Have different types for `DisplaySize`?
 [ ] Better handle the `as` operation (properly convert to/from `f32` and to/from `void`)
+[ ] Option to skip parsing of successive `Option` items if one fails
 
 -- COMMON ITERATOR METHODS --
 enumerate, zip, rev
