--- a/TODO
+++ b/TODO
@@ -108,6 +108,7 @@
 [X] Handle completion item order in language server
 [X] Integrate autocompletion commands to language server
 [X] Improve `match` block
+[ ] Command to add all enum variants to a `match` block
 
 -- LATER --
 [ ] Allow manually specifying function parameters
@@ -154,6 +155,8 @@
 [ ] Have different types for `DisplaySize`?
 [ ] Better handle the `as` operation (properly convert to/from `f32` and to/from `void`)
 [ ] Option to skip parsing of successive `Option` items if one fails
+[ ] Allow multiple constants to be specified in a `match` branch item
+[ ] Add a `location()` method to parsable structs and enums
 
 -- COMMON ITERATOR METHODS --
 enumerate, zip, rev
