--- a/TODO
+++ b/TODO
@@ -109,13 +109,15 @@
 [X] Integrate autocompletion commands to language server
 [X] Improve `match` block
 [X] Add versioning to allocated pointers
+[ ] Replace references to constants with their actual value when possible
 [ ] Command to add all enum variants to a `match` block
+[ ] Allow client to reference server objects with their addresses
 
 -- LATER --
 [ ] Allow manually specifying function parameters
 [ ] One-liner methods
 [ ] Avoid recomputing the full path when using operation-assigment operators (e.g `a.b.c.d += 4` should not compute `a.b.c` twice)
-[ ] Replace references to constants with their actual value when possible
+[ ] Compute constants value at compile time when possible
 [ ] Make `self` available in field default values
 [ ] Add type parameter inference
 [ ] Improve variable type inference according to their first use
