--- a/TODO
+++ b/TODO
@@ -109,9 +109,9 @@
 [X] Integrate autocompletion commands to language server
 [X] Improve `match` block
 [X] Add versioning to allocated pointers
-[ ] Replace references to constants with their actual value when possible
 [ ] Command to add all enum variants to a `match` block
 [ ] Allow client to reference server objects with their addresses
+[ ] Find way to keep a view's state accross multiple updates
 
 -- LATER --
 [ ] Allow manually specifying function parameters
@@ -160,6 +160,8 @@
 [ ] Option to skip parsing of successive `Option` items if one fails
 [ ] Allow multiple constants to be specified in a `match` branch item
 [ ] Add a `location()` method to parsable structs and enums
+[ ] Replace references to constants with their actual value when possible
+[ ] Introduce variables immutability
 
 -- COMMON ITERATOR METHODS --
 enumerate, zip, rev
