--- a/TODO
+++ b/TODO
@@ -111,8 +111,9 @@
 [X] Add versioning to allocated pointers
 [X] Validate a single time after multiple files have been saved
 [X] Command to add all enum variants to a `match` block
-[ ] Allow client to reference server objects with their addresses
-[ ] Find way to keep a view's state accross multiple updates
+[X] Make internal methods show up when working on the prelude
+[X] Allow client to reference server objects with their addresses
+[ ] Rename `DataLocation` into `ItemLocation`
 
 -- LATER --
 [ ] Allow manually specifying function parameters
@@ -162,6 +163,7 @@
 [ ] Add a `location()` method to parsable structs and enums
 [ ] Replace references to constants with their actual value when possible
 [ ] Introduce variables immutability
+[ ] Randomize pointer version when they are first allocated
 
 -- COMMON ITERATOR METHODS --
 enumerate, zip, rev
