--- a/TODO
+++ b/TODO
@@ -116,6 +116,14 @@
 [X] Rename `DataLocation` into `ItemLocation`
 [X] Investigate memory leak
 [X] Randomize pointer version when they are first allocated
+[X] Add autocompletion on field name when constructing an object
+[ ] Option to skip parsing of successive `Option` items if one fails
+[ ] Add `fill class fields` code action
+[ ] Find smooth solution for constructors (maybe separate classes/structs?)
+[ ] Function default arguments
+[ ] Regular expressions
+[ ] Common type `any`
+[ ] Method `or` on `any` type
 
 -- LATER --
 [ ] Allow manually specifying function parameters
@@ -160,12 +168,12 @@
 [ ] Add better syntax highlighting from language server (https://code.visualstudio.com/api/references/vscode-api#DocumentSemanticTokensProvider)
 [ ] Have different types for `DisplaySize`?
 [ ] Better handle the `as` operation (properly convert to/from `f32` and to/from `void`)
-[ ] Option to skip parsing of successive `Option` items if one fails
 [ ] Allow multiple constants to be specified in a `match` branch item
 [ ] Add a `location()` method to parsable structs and enums
 [ ] Replace references to constants with their actual value when possible
 [ ] Introduce variables immutability
 [ ] Display error when number literal is invalid
+[ ] Allocate literal strings a single time
 
 -- COMMON ITERATOR METHODS --
 enumerate, zip, rev
