--- a/TODO
+++ b/TODO
@@ -118,8 +118,8 @@
 [X] Randomize pointer version when they are first allocated
 [X] Add autocompletion on field name when constructing an object
 [X] Option to skip parsing of successive `Option` items if one fails
+[X] Allow to specify default values for parent class fields
 [ ] Add `fill class fields` code action
-[ ] Allow to specify default values for parent class fields
 
 -- LATER --
 [ ] Allow manually specifying function parameters
