Rework parsing error reporting.

--- a/TODO
+++ b/TODO
@@ -119,8 +119,10 @@
 [X] Add autocompletion on field name when constructing an object
 [X] Option to skip parsing of successive `Option` items if one fails
 [X] Allow to specify default values for parent class fields
+[X] Improve `extends` autocompletion
 [ ] Improve `for` loop autocompletion
-[ ] Improve `extends` autocompletion
+[X] Convenience type to create simple tokens
+[ ] Convenience type to create flexible tokens
 [ ] Add shortcut to reload language server
 
 -- LATER --
@@ -177,7 +179,6 @@
 [ ] Regular expressions
 [ ] Function default arguments
 [ ] Add `fill class fields` code action
-[ ] Convenience macro to create simple tokens
 
 -- COMMON ITERATOR METHODS --
 enumerate, zip, rev
