--- a/TODO
+++ b/TODO
@@ -125,7 +125,7 @@
 [X] Convenience type to create flexible tokens
 [X] Reload language server after compilation
 [X] Add time in language server logs
-[ ] Improve completion on type declarations
+[X] Improve completion on type declarations
 
 -- LATER --
 [ ] Allow manually specifying function parameters
