--- a/TODO
+++ b/TODO
@@ -126,6 +126,7 @@
 [X] Reload language server after compilation
 [X] Add time in language server logs
 [X] Improve completion on type declarations
+[X] Add a `location()` method to parsable structs and enums
 
 -- LATER --
 [ ] Allow manually specifying function parameters
@@ -171,7 +172,6 @@
 [ ] Have different types for `DisplaySize`?
 [ ] Better handle the `as` operation (properly convert to/from `f32` and to/from `void`)
 [ ] Allow multiple constants to be specified in a `match` branch item
-[ ] Add a `location()` method to parsable structs and enums
 [ ] Replace references to constants with their actual value when possible
 [ ] Introduce variables immutability
 [ ] Display error when number literal is invalid
