Allocate string literals only once.

--- a/TODO
+++ b/TODO
@@ -127,11 +127,12 @@
 [X] Add time in language server logs
 [X] Improve completion on type declarations
 [X] Add a `location()` method to parsable structs and enums
-[ ] Find solution so that serialization stays compatible between different versions of the program
+[ ] Use serialization with schema when storing items with file system
 [ ] Add local storage api
 [X] Add script to start http server in build
 [X] Prevent http clients from accessing private server files
 [ ] Add completion for dynamic method names
+[X] Allocate literal strings a single time
 
 -- LATER --
 [ ] Allow manually specifying function parameters
@@ -180,7 +181,6 @@
 [ ] Replace references to constants with their actual value when possible
 [ ] Introduce variables immutability
 [ ] Display error when number literal is invalid
-[ ] Allocate literal strings a single time
 [ ] Common type `any`
 [ ] Method `or` on `any` type
 [ ] Regular expressions
