--- a/TODO
+++ b/TODO
@@ -190,6 +190,9 @@
 [ ] Add `fill class fields` code action
 [ ] Use global attributes to specify whether to implement `Debug` and `location` by default or not
 [ ] Improve schema serialization to keep info about the object class (use class name as key?)
+[ ] Compute string hash during string creation
+[ ] Fix serialization with schema for arrays/objects (what happens when an array field becomes a non-array field? or vice-versa)
+[ ] Fix interaction when A defines a dyn autogen method, and B inherits from A and redefines the same autogen dyn method
 
 -- COMMON ITERATOR METHODS --
 enumerate, zip, rev
