--- a/TODO
+++ b/TODO
@@ -134,7 +134,7 @@
 [X] Allocate literal strings a single time
 [ ] Add completion for dynamic method names
 [ ] Add completion for type parameters
-[ ] Signature help: correctly infer type parameters
+[ ] Signature help: correctly infer type parameters (`Array<int>.push()` should display `int` instead of `T`)
 
 -- LATER --
 [ ] Allow manually specifying function parameters
