--- a/TODO
+++ b/TODO
@@ -195,7 +195,7 @@
 [ ] Add completion for dynamic method names
 [ ] Add completion for type parameters
 [ ] Signature help: correctly infer type parameters (`Array<int>.push()` should display `int` instead of `T`)
-[ ] Fix structure of compiler/cli
+[ ] Fix structure of compiler/cli (merge them?)
 
 -- COMMON ITERATOR METHODS --
 enumerate, zip, rev
