Work on framework widgets.

--- a/TODO
+++ b/TODO
@@ -137,6 +137,7 @@
 [X] Differenciate between public, private and internal fields/methods
 [X] Make so spread operator only copies public fields
 [X] Allow anonymous method to use function parameter of parent function
+[X] Add proper completion on variable declaration
 
 -- LATER --
 [ ] Allow manually specifying function parameters
