--- a/TODO
+++ b/TODO
@@ -191,7 +191,7 @@
 [ ] Regular expressions
 [ ] Function default arguments
 [ ] Add `fill class fields` code action
-[ ] Use global attributes to specify whether to implement `Debug` and `location` by default or not
+[ ] `parsable` macro: use global attributes to specify whether to implement `Debug` and `location` by default or not
 [ ] Improve schema serialization to keep info about the object class (use class name as key?)
 [ ] Compute string hash during string creation
 [ ] Fix serialization with schema for arrays/objects (what happens when an array field becomes a non-array field? or vice-versa)
