--- a/TODO
+++ b/TODO
@@ -139,9 +139,9 @@
 [X] Allow anonymous method to use function parameter of parent function
 [X] Add proper completion on variable declaration
 [X] Do not insert function argument when expecting a function identifier
-[ ] Allow chaining function calls (e.g `a()()()`)
+[X] Allow chaining function calls (e.g `a()()()`)
 [ ] Invert priority of `is`/`as` and binary operators
-[ ] Allow void functions to return anything (drop the returned value)
+[ ] Allow void blocks to return anything (drop the returned value)
 [ ] Use `QuickGame*` as default for main type values
 
 -- LATER --
