Accept any value as result of a void block.

--- a/TODO
+++ b/TODO
@@ -141,7 +141,7 @@
 [X] Do not insert function argument when expecting a function identifier
 [X] Allow chaining function calls (e.g `a()()()`)
 [X] Swap priority of `is`/`as` and binary operators
-[ ] Allow void blocks to return anything (drop the returned value)
+[X] Allow void blocks to return anything (drop the returned value)
 [ ] Use `QuickGame*` as default for main type values
 
 -- LATER --
