--- a/TODO
+++ b/TODO
@@ -174,6 +174,7 @@
 [X] Fix completion for enum variants that match expected type
 [X] Add type parameter inference (e.g `let a : Map<int, string> = Map::new()` should work)
 [X] Methods `and` & `or` on `any` type
+[X] Make so `reverse` and `sort` first clone the array
 [X] Allow generic types to inherit from other types
 [X] Make `self` available in field default values
 [ ] Add icon support in text
@@ -186,7 +187,7 @@
 [ ] Compute constants value at compile time when possible
 [ ] Improve variable type inference according to their first use
 [ ] Change the `?` suffix operator to return `none` if the expression it is applied to is `none`
-[ ] Optimize `&&` and `||` when applied to boolean operands
+[ ] Optimize `&&` and `||` when applied to boolean operands with no side effects
 [ ] Think of a way to loosen the restrictions on basic operators (e.g `3f * 2` sould work) (operator overloading?)
 [ ] Encode errors in enum instead of hard-writting them
 [ ] Reduce size of generated wat by merging functions that have exactly the same body
@@ -240,7 +241,6 @@
 [ ] Parsable: add way to forbid new lines after a field
 [ ] Extension: do a bulk validation after a symbol renaming
 [ ] Add `-` unary operator
-[ ] Make so `reverse` and `sort` first clone the array
 [ ] Add `Vector` type
 [ ] When doing `fill * fields`, insert `field_name` instead of `field_name: none` if a variable `field_name` exists
 [ ] Action `fill all fields`: do not insert private fields
@@ -267,3 +267,4 @@
 [ ] Trigger garbage collector over a longer period of time (process page by page)
 [ ] Make so views with no graphics are not detectable
 [ ] Make so a field cannot be default initialized from a field that is initialized after it (e.g `class Foo { a: int = self.b, b: int = 2 }` should not work)
+[ ] Improve the `enum` types so they work like in Rust
