--- a/TODO
+++ b/TODO
@@ -178,9 +178,10 @@
 [X] Allow generic types to inherit from other types
 [X] Make `self` available in field default values
 [X] Rework memory management to allocate less memory when possible
-[ ] Allow splitting event callbacks in "start", "progress" and "end" blocks
+[X] Allow splitting event callbacks in "start", "progress" and "end" blocks
+[X] Add `Event.emit` options to specify pre-process callback & default interception behavior
+[ ] Add completion for event callback step
 [ ] Add event chain concept to handle event emission over time
-[ ] Add `Event.emit` options to specify pre-process callback & default interception behavior
 [ ] Add icon support in text
 [ ] Add badge support in layout api
 
