--- a/TODO
+++ b/TODO
@@ -182,7 +182,8 @@
 [X] Add `Event.emit` options to specify pre-process callback & default interception behavior
 [X] Add completion for event callback step
 [X] Add event chain concept to handle event emission over time
-[ ] Split `Layout` into `BaseLayout` and `ViewLayout`
+[X] Split `Layout` into `Layout` and `ViewLayout`
+[ ] Make `ViewLayout` use `Layout`
 [ ] Add icon support in text
 [ ] Add badge support in layout api
 
