Simplify framework events.

--- a/TODO
+++ b/TODO
@@ -276,3 +276,5 @@
 [ ] Make so a field cannot be default initialized from a field that is initialized after it (e.g `class Foo { a: int = self.b, b: int = 2 }` should not work)
 [ ] Improve the `enum` types so they work like in Rust
 [ ] Remove the need for the `dyn` keyword
+[ ] Make so event name completion only shows objects whose name starts with `On`
+[ ] Add type `Option` to solve the `none` problem
