Add some array methods.

--- a/TODO
+++ b/TODO
@@ -280,3 +280,5 @@
 [ ] Make so event name completion only shows objects whose name starts with `On`
 [ ] Add type `Option` to solve the `none` problem
 [ ] Make so `Array` does not inherit from `Object`
+[ ] Fix stringification of large objects
+[ ] Spread operator for arrays (e.g `let array = [1, ..other_array, 2, 3]`)
