Add server method to emulate request.

--- a/TODO
+++ b/TODO
@@ -282,3 +282,4 @@
 [ ] Make so `Array` does not inherit from `Object`
 [ ] Fix stringification of large objects
 [ ] Spread operator for arrays (e.g `let array = [1, ..other_array, 2, 3]`)
+[ ] Add support for f32 infinity
