Fix test and prepare for field access check.

--- a/TODO
+++ b/TODO
@@ -185,8 +185,8 @@
 [X] Split `Layout` into `Layout` and `ViewLayout`
 [X] Remove the `Event` class
 [X] Make `ViewLayout` use `Layout`
+[ ] Add runtime check on `none` objects
 [ ] Layout: reduce size of child items if their total size would exceed the container size
-[ ] Add animation easing option
 [ ] Add icon support in text
 [ ] Add badge support in layout api
 
@@ -285,3 +285,5 @@
 [ ] Add support for f32 infinity
 [ ] Allow for better interchangability between `float` and `DisplaySize`
 [ ] Improve parsing error messages
+[ ] Bring back `Event`
+[ ] Make so `let a = Self;` works
